# agentic_ai_and_ops

./: README.md  main.py  pyproject.toml
pydantic_ai_day2/: _2_oop_classes.py  _6_fake_ai_call.py  pyproject.toml  python_refresher_&_pydantic.py
python_ai_day1/: python_fundamentals.py
